<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_vla_state</name>
  <version>1.0.0</version>
  <description>ROS node of VLA state service</description>

  <license>BSD-3-Clause-Clear</license>

  <author email="quic_xiaowz@quicinc.com">xiaowz</author>
  <maintainer email="quic_xiaowz@quicinc.com">xiaowz</maintainer>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rcutils</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>qrb_vla_state_manager</depend>
  <depend>qrb_ros_replenish_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
