<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_vla_state_manager</name>
  <version>1.0.0</version>
  <description>Manage VLA state</description>

  <license>BSD-3-Clause-Clear</license>

  <author email="quic_xiaowz@quicinc.com">xiaowz</author>
  <maintainer email="quic_xiaowz@quicinc.com">xiaowz</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
